fix some recipes being missing (id conflict) go back to handling GTRecipe instances that store the recipe ID for simplicity fixes #1897