@@ -34,7 +34,7 @@ public class SteamEnergyRecipeHandler implements IRecipeHandler<Long> {
     }
 
     @Override
-    public List<Long> handleRecipeInner(IO io, RecipeHolder<GTRecipe> recipe, List<Long> left,
+    public List<Long> handleRecipeInner(IO io, GTRecipe recipe, List<Long> left,
                                         @Nullable String slotName,
                                         boolean simulate) {
         long sum = left.stream().reduce(0L, Long::sum);
@@ -46,7 +46,7 @@ public class SteamEnergyRecipeHandler implements IRecipeHandler<Long> {
             list.add(steam);
             var leftSteam = steamTank.handleRecipeInner(io, recipe, list, slotName, simulate);
             if (leftSteam == null || leftSteam.isEmpty()) return null;
-            sum = (long) (leftSteam.get(0).amount() / conversionRate);
+            sum = (long) (leftSteam.getFirst().amount() / conversionRate);
         }
         return sum <= 0 ? null : Collections.singletonList(sum);
     }
